# pydiverse.transform

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  README.md  docker-compose.yaml  environment.yml  fuzz.py  generate_col_ops.py  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/actions/test/: action.yml
.github/scripts/: docker_compose_ready.sh
.github/workflows/: ci.yml  release.yml  tag.yml  test.yml  tests.yml  update-lockfiles.yml
.github/workflows/resources/: docker_compose_ready.sh
ai_docs/: COMPILE_AST_QUERY_RELATIONSHIP.md  PARTITION_BY_VS_GROUP_BY.md
conda.recipe/: meta.yaml
docs/: Makefile  changelog.rst  conf.py  index.rst
docs/package/: README.md
docs/source/: best_practices.md  changelog.md  conf.py  database_testing.md  examples.md  index.md  quickstart.md  table_backends.md
docs/source/_templates/: short_title.rst
docs/source/_templates/autosummary/: accessor_method.rst
docs/source/examples/: aggregations.md  best_practices_entities.md  best_practices_sql_polars.md  duckdb_polars_parquet.md  joining.md  window_functions.md
docs/source/reference/: aligned.rst  api.rst  functions.rst  targets.rst  types.rst  verbs.rst
docs/source/reference/functions/: index.rst
docs/source/reference/operators/: aggregation.rst  arithmetic.rst  comparison.rst  conditional_logic.rst  datetime.rst  horizontal_aggregation.rst  index.rst  list.rst  logical.rst  numerical.rst  sorting_markers.rst  string.rst  type_conversion.rst  window.rst
docs/source/reference/operators/aggregation/: index.rst
docs/source/reference/operators/api/: pydiverse.transform.ColExpr.__lt__.rst  pydiverse.transform.ColExpr.all.rst  pydiverse.transform.ColExpr.any.rst  pydiverse.transform.ColExpr.fill_null.rst  pydiverse.transform.ColExpr.is_in.rst  pydiverse.transform.ColExpr.is_null.rst  pydiverse.transform.all.rst
docs/source/reference/operators/comparison/: index.rst
docs/source/reference/operators/logical/: index.rst
docs/source/reference/operators/string/: index.rst
docs/source/reference/verbs/: index.rst
pdtransform/: __init__.py
pdtransform/core/: __init__.py  alignment.py  column.py  dispatchers.py  functions.py  table.py  table_impl.py  utils.py  verbs.py
pdtransform/core/expressions/: __init__.py  expression.py  expressions.py  lambda_column.py  lambda_getter.py  operator_registry.py  symbolic_expressions.py  translator.py  util.py  utils.py
pdtransform/core/ops/: __init__.py  aggregate.py  core.py  logical.py  numeric.py  registry.py  string.py  window.py
pdtransform/core/util/: __init__.py  bidict.py  ordered_set.py  util.py
pdtransform/eager/: eager_table.py  pandas_table.py
pdtransform/lazy/: lazy_table.py  sql_table.py  verbs.py
pdtransform/util/: testing.py
src/pydiverse/transform/: __init__.py  _typing.py  base.py  common.py  errors.py  extended.py  types.py  version.py
src/pydiverse/transform/_internal/backend/: __init__.py  duckdb.py  duckdb_polars.py  ibm_db2.py  impl_store.py  mssql.py  polars.py  postgres.py  sql.py  sqlalchemy_fixes.py  sqlite.py  table_impl.py  targets.py
src/pydiverse/transform/_internal/errors/: __init__.py
src/pydiverse/transform/_internal/ops/: __init__.py  aggregate.py  core.py  datetime.py  generic.py  logical.py  markers.py  numeric.py  op.py  operator.py  registry.py  signature.py  string.py  window.py
src/pydiverse/transform/_internal/pipe/: align.py  aligned.py  c.py  cache.py  functions.py  pipeable.py  table.py  verbs.py
src/pydiverse/transform/_internal/tree/: __init__.py  ast.py  col_expr.py  dtypes.py  registry.py  types.py  verbs.py
src/pydiverse/transform/backend/: __init__.py  duckdb.py  mssql.py  polars.py  polars_table.py  postgres.py  sql.py  sql_table.py  sqlite.py  table_impl.py  targets.py
src/pydiverse/transform/core/: __init__.py  alignment.py  col_expr.py  column.py  dispatchers.py  dtypes.py  functions.py  registry.py  table.py  table_impl.py  verbs.py
src/pydiverse/transform/eager/: __init__.py  eager_table.py  pandas_table.py  polars_table.py
src/pydiverse/transform/errors/: __init__.py
src/pydiverse/transform/expr/: alignment.py  col_expr.py  registry.py  table_expr.py
src/pydiverse/transform/lazy/: __init__.py  lazy_table.py  sql_table.py
src/pydiverse/transform/ops/: __init__.py  aggregate.py  core.py  datetime.py  generic.py  logical.py  markers.py  numeric.py  string.py  window.py
src/pydiverse/transform/pipe/: backends.py  c.py  functions.py  pipeable.py  table.py  verbs.py
src/pydiverse/transform/polars/: polars_table.py
src/pydiverse/transform/sql/: duckdb.py  mssql.py  postgres.py  sql_table.py  sqlite.py
src/pydiverse/transform/tree/: __init__.py  alignment.py  ast.py  col_expr.py  dtypes.py  preprocessing.py  registry.py  table_expr.py  verbs.py
src/pydiverse/transform/util/: __init__.py  map2d.py  testing.py  warnings.py
tests/: conftest.py  test_backend_equivalence.py  test_core.py  test_example.py  test_expressions.py  test_operator_registry.py  test_pandas_table.py  test_polars_table.py  test_sql_table.py  test_version.py  test_x.py
tests/fixtures/: backend.py  instances.py
tests/fuzzing/: __init__.py  expression.py
tests/parallelize/: README.md
tests/test_backend_equivalence/: __init__.py  conftest.py  test_alias.py  test_arrange.py  test_case_expression.py  test_dtypes.py  test_filter.py  test_group_by.py  test_join.py  test_mutate.py  test_print.py  test_rename.py  test_select.py  test_slice_head.py  test_summarise.py  test_summarize.py  test_syntax.py  test_union.py  test_window_function.py
tests/test_backend_equivalence/test_ops/: test_case_expression.py  test_cast.py  test_functions.py  test_ops_bool.py  test_ops_datetime.py  test_ops_int.py  test_ops_list.py  test_ops_numerical.py  test_ops_string.py
tests/test_fuzzing/: test_fuzzing.py
tests/util/: __init__.py  assertion.py  backend.py  filelock.py  verbs.py
(+55 files in other folders)
