[project]
name = "pydiverse-transform"
version = "0.7.0"
description = "Pipe based dataframe manipulation library that can also transform data on SQL databases"
authors = [
  { name = "QuantCo, Inc." },
  { name = "Nicolas Camenisch", email = "garnele007@gmail.com" },
  { name = "Finn Rudolph", email = "finn.rudolph@t-online.de" },
  { name = "Martin Trautmann", email = "windiana@users.sf.net" },
]
license = { file = "LICENSE" }
readme = "docs/package/README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: SQL",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
requires-python = ">=3.11.14,<3.15.0a0"
dependencies = [
  "pandas >=2.3.0,<3",
  "pyarrow >=20.0.0,<23",
  "polars >=1.30.0,<2",
  "pydiverse-common >=0.4.0,<0.5",
  "sqlalchemy >=2.0.41,<3",
  "black >=20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pydiverse"]

[tool.ruff]
target-version = "py311"
extend-exclude = ["docs/*"]
fix = true
# 88 leads to worse comments
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "UP", "W", "I001", "I002", "B", "A"]
ignore = [
  #  "B017",
  #  "B028",
  "A001", # Keep while filter verb still is called filter
  "A003", # Keep while filter verb still is called filter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"tests/*" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["pydiverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.typos.default.extend-words]
nd = "nd"
